Upgrade App Service Plan to B2 to fix disk space issue
- Change SKU from B1 to B2 (more disk space and memory)
- B1 has limited temp disk space (~11GB)
- PyTorch + dependencies need ~4GB during installation
- B2 provides more headroom for build process
- Fixes 'No space left on device' error during pip install
- B2: 2 cores, 3.5GB RAM, better for production workloads

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # LLM Inference Memory Estimation Tool - Dependencies
 # Python 3.8+ required
 
-# Core dependencies (order matters for faster Azure deployment)
+# Core dependencies
 streamlit>=1.28.0
 transformers>=4.30.0
 torch>=2.0.0
