Fix parameter mapping in azure.yaml to avoid duplicate prompts
- Add explicit parameter mapping: environmentName and location
- Use AZURE_ENV_NAME for environmentName (from azd environment)
- Use AZURE_LOCATION for location (from azd location selection)
- Prevents azd from prompting for environmentName twice
- Fixes confusion where user enters location as environmentName

--- a/azure.yaml
+++ b/azure.yaml
@@ -8,6 +8,9 @@ infra:
   provider: bicep
   path: infra
   module: main
+  parameters:
+    environmentName: ${AZURE_ENV_NAME}
+    location: ${AZURE_LOCATION}
 
 services:
   web:
