--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@
 # Core dependencies
 streamlit>=1.28.0
 transformers>=4.30.0
-torch>=2.0.0
+# CPU-only PyTorch (much smaller, ~200MB vs 4GB with CUDA)
+torch>=2.0.0 --index-url https://download.pytorch.org/whl/cpu
 
 # Optional: For Jupyter Notebook support
 # jupyter>=1.0.0
