--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@
 # Core dependencies
 streamlit>=1.28.0
 transformers>=4.30.0
-torch>=2.0.0
+# PyTorch CPU-only (will use pip.conf to get CPU version from PyTorch repo)
+torch==2.0.1
 
 # Optional: For Jupyter Notebook support
 # jupyter>=1.0.0
