--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@
 # Core dependencies
 streamlit>=1.28.0
 transformers>=4.30.0
-# PyTorch CPU-only (will be installed via PIP_EXTRA_INDEX_URL env var)
-torch>=2.0.0
+# PyTorch CPU-only version for faster deployment and smaller size
+torch>=2.0.0 --index-url https://download.pytorch.org/whl/cpu
 
 # Optional: For Jupyter Notebook support
 # jupyter>=1.0.0
